[gd_scene load_steps=17 format=2]

[ext_resource path="res://texts/generalFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://mesh/reader.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/scene/big_table.png" type="Texture" id=3]
[ext_resource path="res://mesh/computer.tscn" type="PackedScene" id=4]
[ext_resource path="res://mesh/clocks.tscn" type="PackedScene" id=5]
[ext_resource path="res://mesh/room.tscn" type="PackedScene" id=6]
[ext_resource path="res://mesh/stamp.tscn" type="PackedScene" id=7]
[ext_resource path="res://mesh/Hidden_stamp.tscn" type="PackedScene" id=8]
[ext_resource path="res://mesh/inst.tscn" type="PackedScene" id=9]
[ext_resource path="res://mesh/wall_ul.tscn" type="PackedScene" id=10]
[ext_resource path="res://scripts/testing scene.gd" type="Script" id=11]
[ext_resource path="res://sounds/applause.ogg" type="AudioStream" id=12]
[ext_resource path="res://sprites/scene/small_table.png" type="Texture" id=13]
[ext_resource path="res://mesh/ruler.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 11 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45, 135 )

[node name="level_test" type="Node2D"]
script = ExtResource( 11 )

[node name="room" parent="." instance=ExtResource( 6 )]
position = Vector2( -180, 1 )
z_index = -100

[node name="wall_up_left" parent="room" instance=ExtResource( 10 )]
position = Vector2( 47.3045, -137.354 )
scale = Vector2( 1.3, 1.245 )

[node name="stamp" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 49.0189, -16.4527 )
z_as_relative = false

[node name="big_table" type="Sprite" parent="."]
position = Vector2( 176, 96 )
scale = Vector2( 1.02465, 0.996229 )
z_index = -100
texture = ExtResource( 3 )

[node name="small_table" type="Sprite" parent="big_table"]
position = Vector2( -312.284, 44.3729 )
scale = Vector2( 1.2055, 0.925033 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="big_table"]
visible = false
margin_left = -293.0
margin_top = -165.0
margin_right = -180.0
margin_bottom = -108.0
custom_fonts/font = ExtResource( 1 )
text = "Click on
door"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="players_stuff" type="Node2D" parent="."]
position = Vector2( 10, -3 )
scale = Vector2( 1.00349, 1.00465 )

[node name="computer" parent="." instance=ExtResource( 4 )]
position = Vector2( 176, -104 )
z_index = 0

[node name="clocks" parent="computer" instance=ExtResource( 5 )]
position = Vector2( -180, 50.8736 )
z_as_relative = false

[node name="reader" parent="computer" instance=ExtResource( 2 )]
position = Vector2( -122, 156 )
z_index = 0

[node name="inst" parent="." instance=ExtResource( 9 )]
visible = false
position = Vector2( 90.1072, -52 )
scale = Vector2( 0.501745, 0.502325 )
z_index = 5

[node name="lineyka" parent="inst" instance=ExtResource( 14 )]
visible = false
position = Vector2( -225.214, 41.8056 )
rotation = -1.5708
z_index = 2
z_as_relative = false

[node name="background_music" type="AudioStreamPlayer" parent="."]
volume_db = -15.0

[node name="spawn1" type="Area2D" parent="."]
position = Vector2( -96, 120 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn1"]
shape = SubResource( 1 )

[node name="spawn2" type="Area2D" parent="."]
position = Vector2( -281, 176 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn2"]
shape = SubResource( 1 )

[node name="spawn3" type="Area2D" parent="."]
position = Vector2( -204, 176 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="spawn3"]
shape = SubResource( 1 )

[node name="ltrue" type="Label" parent="."]
visible = false
margin_left = -264.0
margin_top = -142.0
margin_right = -237.0
margin_bottom = -111.0
custom_fonts/font = ExtResource( 1 )
text = "true
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lfalse" type="Label" parent="."]
visible = false
margin_left = -229.0
margin_top = -141.0
margin_right = -191.0
margin_bottom = -110.0
custom_fonts/font = ExtResource( 1 )
text = "false"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hidden_stamp" parent="." instance=ExtResource( 8 )]
position = Vector2( 319.963, 81.5 )
scale = Vector2( 0.1, 0.1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 319.963, 103.5 )
rotation = -3.14159
scale = Vector2( 1.07831, -12.6696 )
collision_layer = 31
collision_mask = 31

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( 594.417, -12.8623 )
rotation = 3.14159
polygon = PoolVector2Array( -100, -20.522, -100, -30, 626.908, -30, 626.907, 11.0518, 597.231, 11.0518, 597.232, -20.5199 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2( -0.0341372, -5.06639e-07 )
polygon = PoolVector2Array( -35, -21.5, -35, -40, 705, -40, 705, 10, 596.303, 10.0943, 596.304, -21.5 )

[node name="Camera2D" type="Camera2D" parent="." groups=[
"cam",
]]
position = Vector2( -321.002, -198.007 )
anchor_mode = 0
current = true
zoom = Vector2( 0.501, 0.552 )

[node name="comp_cam" type="Camera2D" parent="." groups=[
"cam",
]]
position = Vector2( 36.5128, -194.965 )
anchor_mode = 0
zoom = Vector2( 0.22, 0.259 )

[node name="otchet_EasterEgg_Area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="otchet_EasterEgg_Area"]
position = Vector2( 405, 90 )
shape = SubResource( 2 )

[node name="easterEggApplause" type="AudioStreamPlayer2D" parent="otchet_EasterEgg_Area"]
stream = ExtResource( 12 )

[connection signal="finished" from="background_music" to="." method="_on_background_music_finished"]
[connection signal="ready" from="background_music" to="." method="_on_background_music_ready"]
[connection signal="body_entered" from="otchet_EasterEgg_Area" to="." method="_on_otchet_EasterEgg_Area_body_entered"]
